--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <marquee behavior="" direction="" scrollamount="20"><p class="heading">Welcome to Dynasty of House</marquee>
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXSNGXHY81"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZXSNGXHY81');
+  </script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
