--- a/About/contactus.html
+++ b/About/contactus.html
@@ -4,6 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Contact us form validation Using Javascript</title>
 	<script src="scripts.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXSNGXHY81"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+  
+      gtag('config', 'G-ZXSNGXHY81');
+    </script>
+    <!-- Google tag (gtag.js) -->
 </head>
 <body>
 
