--- a/Signup/index.html
+++ b/Signup/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   <script src="https://kit.fontawesome.com/0bc5eb8293.js" crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXSNGXHY81"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+  
+      gtag('config', 'G-ZXSNGXHY81');
+    </script>
+    <!-- Google tag (gtag.js) -->
 
 </head>
 <body>
