--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     gtag('config', 'G-ZXSNGXHY81');
   </script>
+  <!-- Google tag (gtag.js) -->
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
